load-tests/setup/small_payload/kit-optimize-2-77/camunda-platform-helm/charts/camunda-platform-8.4/test/unit/zeebe-gateway/golden/ingress-all-enabled.golden.yaml
---
# Source: camunda-platform/templates/zeebe-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camunda-platform-test-zeebe-gateway
  labels:
    app: camunda-platform
    app.kubernetes.io/name: camunda-platform
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/version: "8.4.21"
    app.kubernetes.io/component: zeebe-gateway
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda-platform-test-zeebe-gateway
                port:
                  number: 26500
  tls:
    - hosts:
        - local
      secretName: my-secret
